--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  youtube_player_flutter: ^8.1.2
+  youtube_player_iframe_plus: ^2.3.2
   flutter_speed_dial: ^6.2.0
   font_awesome_flutter: ^10.3.0
+  flutter_riverpod: ^2.1.3
   
 
 
