--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,10 @@ dependencies:
   flutter_speed_dial: ^6.2.0
   font_awesome_flutter: ^10.3.0
   flutter_riverpod: ^2.1.3
-  
+  animated_login: ^1.6.1
+  async: ^2.9.0
+  url_launcher: ^6.1.8
+  phosphor_flutter: ^1.4.0
 
 
 dev_dependencies:
